[gd_scene load_steps=6 format=3 uid="uid://cwa3y585mpfea"]

[ext_resource type="Script" path="res://Scripts/ObjectScripts/SecretAreaVoicelineLaptop.gd" id="1_urt3q"]
[ext_resource type="Texture2D" uid="uid://0ka0ca127d5v" path="res://Assets/Images/Objects/FunctionalProps/SecretAreaVoicelineLaptop.png" id="2_6t4lq"]
[ext_resource type="PackedScene" uid="uid://dvmdybceqknkh" path="res://Objects/StaticObjects/PressEAreaPopup.tscn" id="3_rn0n4"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_335i2"]
size = Vector2(77, 71)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_paq0e"]
size = Vector2(77, 71)

[node name="SecretAreaVoicelineLaptop" type="Node2D"]
script = ExtResource("1_urt3q")

[node name="SecretAreaVoicelineLaptop" type="Sprite2D" parent="."]
position = Vector2(2, -9)
texture = ExtResource("2_6t4lq")

[node name="PressEAreaPopup" parent="." instance=ExtResource("3_rn0n4")]
position = Vector2(0, -25)

[node name="CollisionShape2D" type="CollisionShape2D" parent="PressEAreaPopup"]
position = Vector2(0.5, 21.5)
shape = SubResource("RectangleShape2D_335i2")

[node name="EArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="EArea"]
position = Vector2(0.5, -3.5)
shape = SubResource("RectangleShape2D_paq0e")

[node name="VoicelinePlayer" type="AudioStreamPlayer2D" parent="."]
max_distance = 500.0
attenuation = 0.933036
bus = &"Voicelines"

[connection signal="area_entered" from="EArea" to="." method="_on_e_area_area_entered"]
[connection signal="area_exited" from="EArea" to="." method="_on_e_area_area_exited"]
